Update wwwroot files

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nj.GithubSite.Wasm</title>
+    <title>smaicas</title>
     <base href="/" />
     <link href="_content/Nj.Blazor/css/njblazor.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
