--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>smaicas</title>
     <base href="/" />
+    <link rel="icon" type="image/png" href="logo112.png" />
     <link href="_content/Nj.Blazor/css/njblazor.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
 
